# TickLimiter

./: CMakeLists.txt  README.md  build.bat
include/: detours_hook_api.h  xorstr.hpp
src/: dllmain.cpp  dllmain.h  pch.h  resource.rc
